<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.poorvi_hegde.l9q4.SEditActivity">

    <TextView
        android:id="@+id/sid_1"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/sid"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/sid_edit1"
        app:layout_constraintLeft_toLeftOf="@+id/sname_1"
        app:layout_constraintRight_toRightOf="@+id/sname_1"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/sname_1"
        android:layout_width="92dp"
        android:layout_height="37dp"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="34dp"
        android:gravity="center"
        android:text="@string/sname"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sem_1"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/sem_1"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:text="@string/sem"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/branch_1"
        app:layout_constraintLeft_toLeftOf="@+id/sname_1"
        app:layout_constraintRight_toRightOf="@+id/sname_1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/branch_1"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:text="@string/branch"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/faculty_1"
        app:layout_constraintLeft_toLeftOf="@+id/sem_1"
        app:layout_constraintRight_toRightOf="@+id/sem_1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/faculty_1"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/faculty"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/faculty_edit1"
        app:layout_constraintLeft_toLeftOf="@+id/branch_1"
        app:layout_constraintRight_toRightOf="@+id/branch_1"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/sid_edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/sid_edit"
        app:layout_constraintBottom_toBottomOf="@+id/sname_1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/sname_edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="31dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/sname_edit"
        app:layout_constraintBottom_toTopOf="@+id/sem_edit1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/sem_edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/sem_edit"
        app:layout_constraintBottom_toTopOf="@+id/branch_edit1"
        app:layout_constraintLeft_toLeftOf="@+id/sname_edit1"
        app:layout_constraintRight_toRightOf="@+id/sname_edit1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/branch_edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/branch_edit"
        app:layout_constraintBottom_toTopOf="@+id/faculty_edit1"
        app:layout_constraintLeft_toLeftOf="@+id/sem_edit1"
        app:layout_constraintRight_toRightOf="@+id/sem_edit1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/faculty_edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/faculty_edit"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/branch_edit1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="114dp"
        app:layout_constraintLeft_toLeftOf="@+id/branch_edit1"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/submit_1"
        android:layout_width="139dp"
        android:layout_height="51dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="46dp"
        android:text="@string/submit_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faculty_edit1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>