<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.poorvi_hegde.l9q4.MainActivity">

    <Button
        android:id="@+id/create"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="102dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintLeft_toLeftOf="@+id/view"
        app:layout_constraintRight_toRightOf="@+id/view"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/view"
        android:layout_width="145dp"
        android:layout_height="61dp"
        android:text="@string/display"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/edit"
        android:layout_marginStart="99dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="47dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/edit"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginBottom="140dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/view"
        app:layout_constraintRight_toRightOf="@+id/view"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>
